--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask==2.3.3
-PyMySQL==1.1.0
-Flask-Login==0.6.3
-requests==2.31.0
-Werkzeug==2.3.7
-python-dotenv==1.0.0
-waitress==2.1.2
+Flask>=2.0.0
+PyMySQL>=1.0.0
+Flask-Login>=0.6.0
+requests>=2.25.0
+Werkzeug>=2.0.0
+python-dotenv>=0.19.0
+waitress>=2.0.0
